<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:layout_margin="10dp"
    >

    <TextView
        android:layout_marginTop="200dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcomeTitle"
        android:gravity="center"
        android:textSize="40dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textFontWeight="400"
        />

    <LinearLayout
        android:layout_marginTop="100dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:orientation="vertical"
            android:gravity="center"
            >
            <Button
                android:id="@+id/teacherButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:backgroundTint="@color/light_blue"
                android:layout_margin="5dp"
                android:text="@string/teacherTitle"
                />

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:maxWidth="40dp"
                android:src="@drawable/teacher" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:orientation="vertical"
            android:gravity="center"
            >
            <Button
                android:id="@+id/studentButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:backgroundTint="@color/light_blue"
                android:layout_margin="5dp"
                android:text="@string/studentTitle"
                />

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:maxWidth="40dp"
                android:src="@drawable/student_icon" />
        </LinearLayout>
    </LinearLayout>



</LinearLayout>